--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,30 +1,19 @@
+# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-# It will not be overwritten, so edit it as you like.
-#
-# Should you change your keyboard layout some time, delete
-# this file and re-run i3-config-wizard(1).
-#
+#                     _ _____                    __ _
+#   _ __ ___  _   _  (_)___ /    ___ ___  _ __  / _(_)
+#  | '_ ` _ \| | | | | | |_ \   / __/ _ \| '_ \| |_| |/ _` |
+#  | | | | | | |_| | | |___) | | (_| (_) | | | |  _| | (_| |
+#  |_| |_| |_|\__, | |_|____/   \___\___/|_| |_|_| |_|\__, |
+#             |___/                                   |___/
 
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
+# Font {{{
 
-set $mod Mod4
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
 font pango: Hack 8
 
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+# }}}
 
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+# Colors {{{
 
 ## Base16 Gruvbox dark, soft
 # Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
@@ -48,7 +37,6 @@ set $base0D #83a598
 set $base0E #d3869b
 set $base0F #d65d0e
 
-# Basic color configuration using the Base16 variables for windows and borders.
 # Property Name         Border  BG      Text    Indicator Child Border
 client.focused          $base00 $base00 $base07 $base0D $base0A
 client.focused_inactive $base01 $base01 $base03 $base03 $base01
@@ -57,75 +45,15 @@ client.urgent           $base08 $base08 $base00 $base08 $base08
 client.placeholder      $base00 $base00 $base05 $base00 $base00
 client.background       $base07
 
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+# }}}
 
-# start a terminal
-bindsym $mod+Return exec alacritty
+# Variables {{{
 
-# kill focused window
-bindsym $mod+Shift+q kill
+set $mod Mod4
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun -display-drun ""
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+set $output1 "HDMI-0"
+set $output2 "DP-2"
 
-# change focus
-# bindsym $mod+j focus left
-# bindsym $mod+k focus down
-# bindsym $mod+l focus up
-# bindsym $mod+semicolon focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
-bindsym $mod+h split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
-
-bindsym $mod+x [urgent=latest] focus
-
-# workspace aliases
 set $w1 "1"
 set $w2 "2"
 set $w3 "3"
@@ -137,7 +65,35 @@ set $w8 "8"
 set $w9 "9"
 set $w10 "10"
 
-# switch to workspace
+set $mode_screenshot screenshot (f) full, (s) select
+set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+set $mode_media media
+#set $mode_spotify spotify
+
+# }}}
+
+# Keybindings {{{
+
+floating_modifier $mod
+
+bindsym $mod+Return      exec alacritty
+bindsym $mod+Shift+x     kill
+bindsym $mod+d exec      rofi -show drun -display-drun ""
+bindsym $mod+Left        focus left
+bindsym $mod+Down        focus down
+bindsym $mod+Up          focus up
+bindsym $mod+Right       focus right
+bindsym $mod+Shift+Left  move left
+bindsym $mod+Shift+Down  move down
+bindsym $mod+Shift+Up    move up
+bindsym $mod+Shift+Right move right
+bindsym $mod+h           split h
+bindsym $mod+v           split v
+bindsym $mod+f           fullscreen toggle
+bindsym $mod+Shift+space floating toggle
+bindsym $mod+space       focus mode_toggle
+bindsym $mod+x           [urgent=latest] focus
+
 bindsym $mod+1 workspace $w1
 bindsym $mod+2 workspace $w2
 bindsym $mod+3 workspace $w3
@@ -161,125 +117,52 @@ bindsym $mod+Shift+8 move container to workspace $w8
 bindsym $mod+Shift+9 move container to workspace $w9
 bindsym $mod+Shift+0 move container to workspace $w10
 
-# workspace default monitors
-workspace $w1 output DP-2
-workspace $w2 output HDMI-0
-workspace $w3 output HDMI-0
-workspace $w4 output HDMI-0
-workspace $w5 output HDMI-0
-workspace $w6 output HDMI-0
-workspace $w7 output HDMI-0
-workspace $w8 output HDMI-0
-workspace $w9 output HDMI-0
-workspace $w10 output DP-2
+bindsym $mod+q focus output $output1
+bindsym $mod+w focus output $output2
 
-# reload the configuration file
+bindsym $mod+Shift+q move workspace to output $output1
+bindsym $mod+Shift+w move workspace to output $output2
+
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+d exec autorandr --load undocked
-
-# resize window (you can also use the mouse for that)
-mode "resize" {
-  # These bindings trigger as soon as you enter the resize mode
-
-  # Pressing left will shrink the window’s width.
-  # Pressing right will grow the window’s width.
-  # Pressing up will shrink the window’s height.
-  # Pressing down will grow the window’s height.
-  bindsym j resize shrink width 10 px or 10 ppt
-  bindsym k resize grow height 10 px or 10 ppt
-  bindsym l resize shrink height 10 px or 10 ppt
-  bindsym semicolon resize grow width 10 px or 10 ppt
-
-  # same bindings, but for the arrow keys
-  bindsym Left resize shrink width 10 px or 10 ppt
-  bindsym Down resize grow height 10 px or 10 ppt
-  bindsym Up resize shrink height 10 px or 10 ppt
-  bindsym Right resize grow width 10 px or 10 ppt
-
-  # back to normal: Enter or Escape
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-set $mode_screenshot screenshot (f) full, (s) select
-mode "$mode_screenshot" {
-  bindsym --release f exec --no-startup-id scrot '%Y-%m-%d_%H%M%S_$wx$h.png' -d 1, mode "default"
-  bindsym --release s exec --no-startup-id scrot -s '%Y-%m-%d_%H%M%S_$wx$h.png', mode "default"
-
-  # back to normal: Enter or Escape
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-}
-
-bindsym $mod+p mode "$mode_screenshot"
-
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
-mode "$mode_system" {
-  bindsym l exec --no-startup-id ~/.config/i3/i3exit lock, mode "default"
-  bindsym e exec --no-startup-id ~/.config/i3/i3exit logout, mode "default"
-  bindsym s exec --no-startup-id ~/.config/i3/i3exit suspend, mode "default"
-  bindsym h exec --no-startup-id ~/.config/i3/i3exit hibernate, mode "default"
-  bindsym r exec --no-startup-id ~/.config/i3/i3exit reboot, mode "default"
-  bindsym Shift+s exec --no-startup-id ~/.config/i3/i3exit shutdown, mode "default"
-
-  # back to normal: Enter or Escape
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-}
-
-bindsym $mod+l mode "$mode_system"
-
-set $mode_media media
-mode "$mode_media" {
-  bindsym Up exec --no-startup-id pactl set-sink-volume 0 +5%
-  bindsym Down exec --no-startup-id pactl set-sink-volume 0 -5%
-  bindsym Left exec mpc prev
-  bindsym Right exec mpc next
-  bindsym space exec mpc toggle, mode "default"
-
-  # back to normal: Enter or Escape
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-}
-bindsym $mod+m mode "$mode_media"
+bindsym $mod+r       mode "resize"
+bindsym $mod+p       mode "$mode_screenshot"
+bindsym $mod+l       mode "$mode_system"
+bindsym $mod+m       mode "$mode_media"
 bindsym $mod+Shift+m exec --no-startup-id ~/mopidy/launch.sh
-
-#set $mode_spotify spotify
-#mode "$mode_spotify" {
-  # workaround for the spotify snap
-  # bindsym Up exec --no-startup-id pactl set-sink-volume 0 +5%
-  # bindsym Down exec --no-startup-id pactl set-sink-volume 0 -5%
-  # bindsym Left exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
-  # bindsym Right exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
-  # bindsym space exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause, mode "default"
-
-  # back to normal: Enter or Escape
-  # bindsym Return mode "default"
-  # bindsym Escape mode "default"
-#}
 #bindsym $mod+Shift+m mode "$mode_spotify"
+bindsym $mod+Tab     workspace back_and_forth
 
-bindsym $mod+Tab workspace back_and_forth
-
-# Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+minus       scratchpad show
 
-# Show the first scratchpad window
-bindsym $mod+minus scratchpad show
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
+bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@ toggle # mute sound
+bindsym XF86AudioPlay        exec mpc toggle
+bindsym XF86AudioPause       exec mpc toggle
+bindsym XF86AudioNext        exec mpc next
+bindsym XF86AudioPrev        exec mpc prev
+
+# }}}
+
+# Windows rules and decorations {{{
 
 hide_edge_borders both
+gaps inner        15
+smart_gaps        on
 
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-bindsym XF86AudioPlay exec mpc toggle
-bindsym XF86AudioPause exec mpc toggle
-bindsym XF86AudioNext exec mpc next
-bindsym XF86AudioPrev exec mpc prev
+workspace $w1 output $output2
+workspace $w2 output $output1
+workspace $w3 output $output1
+workspace $w4 output $output1
+workspace $w5 output $output1
+workspace $w6 output $output1
+workspace $w7 output $output1
+workspace $w8 output $output1
+workspace $w9 output $output1
+workspace $w10 output $output2
 
 for_window [class="^.*"]       border pixel 1
 for_window [class="Ulauncher"] border pixel 0
@@ -313,11 +196,19 @@ assign [class="jetbrains-datagrip"] $w5
 assign [class="Franz"]              $w1
 assign [class="mpv"]                $w10
 
+# }}}
+
+# Execute always (when restarting i3) {{{
+
 exec_always --no-startup-id setxkbmap -rules evdev -model pc105 -layout us -variant intl -option compose:rctrl
 exec_always --no-startup-id feh --bg-scale ~/Pictures/wallpaper.png
 exec_always --no-startup-id autorandr --change
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 exec_always --no-startup-id ~/scripts/picom.sh
+
+# }}}
+
+# Execute on system startup {{{
 
 exec --no-startup-id xfce4-power-manager
 # exec --no-startup-id compton -f
@@ -326,5 +217,70 @@ exec --no-startup-id blueman-applet &
 exec --no-startup-id franz
 exec --no-startup-id i3-msg 'workspace $w2;'
 
-gaps inner 15
-smart_gaps on
+# }}}
+
+# Modes {{{
+
+mode "resize" {
+  bindsym j resize shrink width 10 px or 10 ppt
+  bindsym k resize grow height 10 px or 10 ppt
+  bindsym l resize shrink height 10 px or 10 ppt
+  bindsym semicolon resize grow width 10 px or 10 ppt
+
+  bindsym Left resize shrink width 10 px or 10 ppt
+  bindsym Down resize grow height 10 px or 10 ppt
+  bindsym Up resize shrink height 10 px or 10 ppt
+  bindsym Right resize grow width 10 px or 10 ppt
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+mode "$mode_screenshot" {
+  bindsym --release f exec --no-startup-id scrot '%Y-%m-%d_%H%M%S_$wx$h.png' -d 1, mode "default"
+  bindsym --release s exec --no-startup-id scrot -s '%Y-%m-%d_%H%M%S_$wx$h.png', mode "default"
+
+  # back to normal: Enter or Escape
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+mode "$mode_system" {
+  bindsym l exec --no-startup-id ~/.config/i3/i3exit lock, mode "default"
+  bindsym e exec --no-startup-id ~/.config/i3/i3exit logout, mode "default"
+  bindsym s exec --no-startup-id ~/.config/i3/i3exit suspend, mode "default"
+  bindsym h exec --no-startup-id ~/.config/i3/i3exit hibernate, mode "default"
+  bindsym r exec --no-startup-id ~/.config/i3/i3exit reboot, mode "default"
+  bindsym Shift+s exec --no-startup-id ~/.config/i3/i3exit shutdown, mode "default"
+
+  # back to normal: Enter or Escape
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+mode "$mode_media" {
+  bindsym Up exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+  bindsym Down exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+  bindsym Left exec mpc prev
+  bindsym Right exec mpc next
+  bindsym space exec mpc toggle, mode "default"
+
+  # back to normal: Enter or Escape
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+}
+
+#mode "$mode_spotify" {
+  # workaround for the spotify snap
+  # bindsym Up exec --no-startup-id pactl set-sink-volume 0 +5%
+  # bindsym Down exec --no-startup-id pactl set-sink-volume 0 -5%
+  # bindsym Left exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
+  # bindsym Right exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+  # bindsym space exec dbus-send --type=method_call --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause, mode "default"
+
+  # back to normal: Enter or Escape
+  # bindsym Return mode "default"
+  # bindsym Escape mode "default"
+#}
+
+# }}}
