--- a/.config/i3/config
+++ b/.config/i3/config
@@ -64,6 +64,7 @@ set $w7 "7"
 set $w8 "8"
 set $w9 "9"
 set $w10 "10"
+set $w11 "11"
 
 set $mode_screenshot screenshot (f) full, (s) select
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
@@ -76,7 +77,7 @@ set $mode_media media
 
 floating_modifier $mod
 
-bindsym $mod+Return      exec alacritty
+bindsym $mod+Return      exec kitty
 bindsym $mod+Shift+x     kill
 bindsym $mod+d exec      rofi -show drun -display-drun ""
 bindsym $mod+Left        focus left
@@ -104,6 +105,7 @@ bindsym $mod+7 workspace $w7
 bindsym $mod+8 workspace $w8
 bindsym $mod+9 workspace $w9
 bindsym $mod+0 workspace $w10
+bindsym $mod+a workspace $w11; exec --no-startup-id ~/scripts/ranger.sh # this is not working
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $w1
@@ -135,7 +137,7 @@ bindsym $mod+Shift+m exec --no-startup-id ~/mopidy/launch.sh
 bindsym $mod+Tab     workspace back_and_forth
 
 bindsym $mod+Shift+minus move scratchpad
-bindsym $mod+minus       scratchpad show
+bindsym $mod+minus   exec --no-startup-id ~/scripts/scratchpad.py
 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
@@ -173,7 +175,6 @@ for_window [window_role="task_dialog"]      floating enable
 for_window [window_role="Preferences"]      floating enable
 for_window [window_type="dialog"]           floating enable
 for_window [window_type="menu"]             floating enable
-
 for_window [class="zoom"]                   floating enable
 for_window [class="Pavucontrol"]            floating enable
 for_window [class="xpad"]                   floating enable
@@ -181,6 +182,8 @@ for_window [class="Gnome-power-statistics"] floating enable
 for_window [class="Blueman-manager"]        floating enable
 for_window [class="Pidgin"]                 floating enable
 for_window [class="Conky"]                  floating enable
+
+for_window [class="Brave-browser"][window_role="pop-up"] move scratchpad
 
 for_window [class="jetbrains-idea"] layout tabbed
 for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move down 30 px
@@ -190,11 +193,13 @@ for_window [class="^jetbrains-.+"][window_type=dialog] focus
 for_window [instance="sun-awt-X11-XWindowPeer"] border pixel 0
 for_window [class="jetbrains-idea" title="win0"] floating enable;
 
+assign [class="Brave-browser"]      $w2
 assign [class="Google-chrome"]      $w2
 assign [class="jetbrains-idea"]     $w3
 assign [class="jetbrains-datagrip"] $w5
 assign [class="Franz"]              $w1
 assign [class="mpv"]                $w10
+assign [class="Postman"]            $w9
 
 # }}}
 
