--- a/.config/i3/config
+++ b/.config/i3/config
@@ -119,11 +119,11 @@ bindsym $mod+Shift+8 move container to workspace $w8
 bindsym $mod+Shift+9 move container to workspace $w9
 bindsym $mod+Shift+0 move container to workspace $w10
 
-bindsym $mod+q focus output $output1
-bindsym $mod+w focus output $output2
+bindsym $mod+w focus output $output1
+bindsym $mod+q focus output $output2
 
-bindsym $mod+Shift+q move workspace to output $output1
-bindsym $mod+Shift+w move workspace to output $output2
+bindsym $mod+Shift+w move workspace to output $output1
+bindsym $mod+Shift+q move workspace to output $output2
 
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
@@ -182,6 +182,8 @@ for_window [class="Gnome-power-statistics"] floating enable
 for_window [class="Blueman-manager"]        floating enable
 for_window [class="Pidgin"]                 floating enable
 for_window [class="Conky"]                  floating enable
+for_window [class="TelegramDesktop"]        floating enable
+for_window [class="discord"]                floating enable
 
 for_window [class="Brave-browser"][window_role="pop-up"] move scratchpad
 
@@ -192,10 +194,12 @@ for_window [class="(?i)gsimplecal"] floating enable, move position mouse, move d
 for_window [class="^jetbrains-.+"][window_type=dialog] focus
 for_window [instance="sun-awt-X11-XWindowPeer"] border pixel 0
 for_window [class="jetbrains-idea" title="win0"] floating enable;
+for_window [class="jetbrains-webstorm" title="win0"] floating enable;
 
 assign [class="Brave-browser"]      $w2
 assign [class="Google-chrome"]      $w2
 assign [class="jetbrains-idea"]     $w3
+assign [class="jetbrains-webstorm"] $w3
 assign [class="jetbrains-datagrip"] $w5
 assign [class="Franz"]              $w1
 assign [class="mpv"]                $w10
@@ -219,7 +223,7 @@ exec --no-startup-id xfce4-power-manager
 # exec --no-startup-id compton -f
 exec --no-startup-id nm-applet &
 exec --no-startup-id blueman-applet &
-exec --no-startup-id franz
+#exec --no-startup-id franz
 exec --no-startup-id i3-msg 'workspace $w2;'
 
 # }}}
