--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Hack Regular
-bold_font        Hack Bold
-italic_font      Hack Italic
-bold_italic_font Hack Bold Italic
+font_family      Fira Code Regular
+bold_font        Fira Code Bold
+italic_font      Fira Code Light
+bold_italic_font Fira Code SemiBold
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -84,7 +84,7 @@ cursor_text_color #111111
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-cursor_shape block
+cursor_shape beam
 
 #: The cursor shape can be one of (block, beam, underline)
 
